Closed Bug 1791887 Opened 2 years ago Closed 2 years ago

Intermittent Assertion failure: currentTime - lastAllocRateUpdateTime >= collectorTimeSinceAllocRateUpdate.ref(), at /builds/worker/checkouts/gecko/js/src/gc/GC.cpp:2947

Categories

(Core :: JavaScript: GC, defect, P5)

defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox105 --- wontfix
firefox106 --- wontfix
firefox107 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jonco)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: mlaza [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=391085338&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/UbB8XQUrSemkgYQ_rS9XzA/runs/1/artifacts/public/logs/live_backing.log


[task 2022-09-21T21:21:23.486Z] TEST-PASS | js/src/jit-test/tests/gc/bug1511412.js | Success (code 0, args "--blinterp-eager") [0.0 s]
[task 2022-09-21T21:21:23.496Z] Assertion failure: currentTime - lastAllocRateUpdateTime >= collectorTimeSinceAllocRateUpdate.ref(), at /builds/worker/checkouts/gecko/js/src/gc/GC.cpp:2947
[task 2022-09-21T21:21:23.496Z] #01: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0xbe4a27]
[task 2022-09-21T21:21:23.496Z] #02: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0xbeaf61]
[task 2022-09-21T21:21:23.496Z] #03: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0xbb8768]
[task 2022-09-21T21:21:23.496Z] #04: JSRuntime::destroyRuntime()[/builds/worker/workspace/obj-spider/dist/bin/js +0x6b86b1]
[task 2022-09-21T21:21:23.496Z] #05: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x563f05]
[task 2022-09-21T21:21:23.496Z] #06: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x255329]
[task 2022-09-21T21:21:23.496Z] #07: __libc_start_main[/lib/x86_64-linux-gnu/libc.so.6 +0x26d0a]
[task 2022-09-21T21:21:23.496Z] #08: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x246ee9]
[task 2022-09-21T21:21:23.496Z] #09: ??? (???:???)
[task 2022-09-21T21:21:23.496Z] ExceptionHandler::GenerateDump cloned child 6842
[task 2022-09-21T21:21:23.496Z] ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2022-09-21T21:21:23.497Z] ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2022-09-21T21:21:23.497Z] Exit code: -11
[task 2022-09-21T21:21:23.497Z] FAIL - gc/bug1471949.js
[task 2022-09-21T21:21:23.497Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug1471949.js | Assertion failure: currentTime - lastAllocRateUpdateTime >= collectorTimeSinceAllocRateUpdate.ref(), at /builds/worker/checkouts/gecko/js/src/gc/GC.cpp:2947 (code -11, args "--baseline-eager") [0.1 s]
[task 2022-09-21T21:21:23.498Z] INFO exit-status     : -11
[task 2022-09-21T21:21:23.499Z] INFO timed-out       : False
[task 2022-09-21T21:21:23.499Z] INFO stderr         2> Assertion failure: currentTime - lastAllocRateUpdateTime >= collectorTimeSinceAllocRateUpdate.ref(), at /builds/worker/checkouts/gecko/js/src/gc/GC.cpp:2947
[task 2022-09-21T21:21:23.499Z] INFO stderr         2> #01: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0xbe4a27]
[task 2022-09-21T21:21:23.500Z] INFO stderr         2> #02: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0xbeaf61]
[task 2022-09-21T21:21:23.500Z] INFO stderr         2> #03: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0xbb8768]
[task 2022-09-21T21:21:23.500Z] INFO stderr         2> #04: JSRuntime::destroyRuntime()[/builds/worker/workspace/obj-spider/dist/bin/js +0x6b86b1]
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> #05: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x563f05]
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> #06: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x255329]
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> #07: __libc_start_main[/lib/x86_64-linux-gnu/libc.so.6 +0x26d0a]
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> #08: ???[/builds/worker/workspace/obj-spider/dist/bin/js +0x246ee9]
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> #09: ??? (???:???)
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> ExceptionHandler::GenerateDump cloned child 6842
[task 2022-09-21T21:21:23.501Z] INFO stderr         2> ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2022-09-21T21:21:23.502Z] INFO stderr         2> ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2022-09-21T21:21:23.507Z] TEST-PASS | js/src/jit-test/tests/gc/bug1600017.js | Success (code 0, args "") [0.0 s]
Assignee: nobody → jcoppeard

There's a comment below that says that we occasionally observe collector time
being larger than total time, so it's not safe to assert this.

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/04b1663a5ed9 Remove timing assertion that doesn't always hold r=sfink
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: