Bug 1791887 - Remove timing assertion that doesn't always hold r=sfink

There's a comment below that says that we occasionally observe collector time
being larger than total time, so it's not safe to assert this.

Differential Revision: https://phabricator.services.mozilla.com/D157919